// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <AddServiceForm /> without throwing 1`] = `
.c4 {
  margin-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c7 + button {
  margin-left: 0.375rem;
}

.c6 {
  display: inline-block;
}

.c5 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
}

.c5:focus {
  outline: 0;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c5:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c5:active,
.c5:active:hover,
.c5:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c5[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c2 {
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  margin-right: 0.75rem;
  font-weight: bold;
  white-space: pre;
  font-size: 0.8125rem;
}

.c1 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c3 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  max-width: 22.1875rem;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c3::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c3::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c3:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c3:invalid {
  box-shadow: none;
}

.c3:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c3:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c3:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c3:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c3:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

<form
  onSubmit={undefined}
>
  <div
    className="c0"
  >
    <div
      className="baseline-jVaZNU kXgQxt c1"
      name="name"
      role="group"
      style={undefined}
    >
      <label
        className="c2"
        htmlFor="Y"
      >
        Attach to new CNS service name
      </label>
      <input
        className="c3"
        disabled={false}
        id="Y"
        onBlur={null}
        placeholder="Example: mySQLdb"
      />
    </div>
    <div
      className="c4"
    >
      <button
        className="c5 c6 c7"
        disabled={undefined}
        href=""
        type="submit"
      >
        Add
      </button>
    </div>
  </div>
</form>
`;

exports[`renders <AddServiceForm pristine /> without throwing 1`] = `
.c4 {
  margin-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c7 + button {
  margin-left: 0.375rem;
}

.c6 {
  display: inline-block;
}

.c5 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  cursor: not-allowed;
  pointer-events: none;
  color: rgb(216,216,216);
  background-color: rgb(250,250,250);
  border-color: rgb(216,216,216);
}

.c5:focus {
  outline: 0;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c5:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c5:active,
.c5:active:hover,
.c5:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c5[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c5:focus {
  background-color: rgb(250,250,250);
  border-color: rgb(216,216,216);
}

.c5:hover {
  background-color: rgb(250,250,250);
  border-color: rgb(250,250,250);
}

.c5:active,
.c5:active:hover,
.c5:active:focus {
  background-color: rgb(250,250,250);
  border-color: rgb(250,250,250);
}

.c2 {
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  margin-right: 0.75rem;
  font-weight: bold;
  white-space: pre;
  font-size: 0.8125rem;
}

.c1 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c3 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  max-width: 22.1875rem;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c3::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c3::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c3:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c3:invalid {
  box-shadow: none;
}

.c3:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c3:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c3:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c3:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c3:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

<form
  onSubmit={undefined}
>
  <div
    className="c0"
  >
    <div
      className="baseline-jVaZNU kXgQxt c1"
      name="name"
      role="group"
      style={undefined}
    >
      <label
        className="c2"
        htmlFor="Z"
      >
        Attach to new CNS service name
      </label>
      <input
        className="c3"
        disabled={false}
        id="Z"
        onBlur={null}
        placeholder="Example: mySQLdb"
      />
    </div>
    <div
      className="c4"
    >
      <button
        className="c5 c6 c7"
        disabled={true}
        href=""
        type="submit"
      >
        Add
      </button>
    </div>
  </div>
</form>
`;

exports[`renders <Header/> without throwing 1`] = `
Array [
  .c0 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c0 + p,
.c0 + small,
.c0 + h1,
.c0 + h2,
.c0 + label,
.c0 + h3,
.c0 + h4,
.c0 + h5,
.c0 + div,
.c0 + span {
  margin-top: 1.5rem;
}

<h3
    className="c0"
>
    Hostnames
</h3>,
  .c0 {
  padding-bottom: 0.5rem;
}

.c1 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c1 + p,
.c1 + small,
.c1 + h1,
.c1 + h2,
.c1 + label,
.c1 + h3,
.c1 + h4,
.c1 + h5,
.c1 + div,
.c1 + span {
  padding-bottom: 2.25rem;
}

<div
    className="c0"
>
    <p
        className="c1"
    >
        Default hostnames are automatically generated from both the instance name and any attached networks.
    </p>
</div>,
]
`;

exports[`renders <Hostname /> without throwing 1`] = `null`;

exports[`renders <Hostname values /> without throwing 1`] = `
.c0 {
  margin-bottom: 2rem;
}

.c5 {
  margin-right: 0.25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c4 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c3 {
  font-size: 80%;
  color: rgba(73,73,73,1);
  line-height: 1.125rem;
  font-size: 0.8125rem;
  font-weight: 600;
}

.c6 {
  font-size: 80%;
  color: rgba(73,73,73,1);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c7 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgb(250,250,250);
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
  font-family: "Roboto Mono";
  width: 100%;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c7::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c7::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c7:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c7:invalid {
  box-shadow: none;
}

.c7::-webkit-input-placeholder {
  color: rgb(216,216,216);
}

.c7::-moz-placeholder {
  color: rgb(216,216,216);
}

.c7:-ms-input-placeholder {
  color: rgb(216,216,216);
}

.c7:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c7:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c7:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c7:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c7:disabled {
  color: rgba(73,73,73,1);
}

.c7:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,1);
}

.c7:disabled::-moz-placeholder {
  color: rgba(73,73,73,1);
}

.c7:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,1);
}

.c7:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c2 {
  padding-right: 0.75rem;
  margin-right: 0.75rem;
  border-right: 0.0625rem solid rgb(216,216,216);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <small
      className="c2 c3"
    >
      Instance name
       
      hostname
      s
    </small>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <svg
          className=""
          height="16"
          innerRef={undefined}
          style={
            Object {
              "transform": "rotate(0deg)",
            }
          }
          viewBox="0 0 12 16"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10,6V4A4,4,0,0,0,2,4V6H2A2,2,0,0,0,0,8v6a2,2,0,0,0,2,2h8a2,2,0,0,0,2-2V8A2,2,0,0,0,10,6ZM4,4c0-1.65.35-2,2-2s2,.35,2,2V6H4Zm6,9a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V9A1,1,0,0,1,3,8H9a1,1,0,0,1,1,1ZM6,13H6a1,1,0,0,1-1-1V10A1,1,0,0,1,6,9H6a1,1,0,0,1,1,1v2A1,1,0,0,1,6,13Z"
            fill="rgba(73, 73, 73, 1)"
          />
        </svg>
      </div>
    </div>
    <div
      className="c4"
    >
      <small
        className="c6"
      >
        Private
      </small>
    </div>
  </div>
  <input
    className="c7"
    disabled={true}
    id=""
    onBlur={null}
    value="111"
  />
  <input
    className="c7"
    disabled={true}
    id=""
    onBlur={null}
    value="111"
  />
</div>
`;

exports[`renders <HostnamesHeader /> without throwing 1`] = `
.c0 {
  margin-top: 2rem;
}

.c2 {
  padding-bottom: 1rem;
}

.c3 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c3 + p,
.c3 + small,
.c3 + h1,
.c3 + h2,
.c3 + label,
.c3 + h3,
.c3 + h4,
.c3 + h5,
.c3 + div,
.c3 + span {
  padding-bottom: 2.25rem;
}

.c1 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c1 + p,
.c1 + small,
.c1 + h1,
.c1 + h2,
.c1 + label,
.c1 + h3,
.c1 + h4,
.c1 + h5,
.c1 + div,
.c1 + span {
  margin-top: 1.5rem;
}

<div
  className="c0"
>
  <h3
    className="c1"
  >
    CNS service hostnames
  </h3>
  <div
    className="c2"
  >
    <p
      className="c3"
    >
      CNS service hostnames are created by attaching a CNS service name to one or more instances. You can serve multiple instances under the same hostname by assigning them to a matching CNS service name.
    </p>
  </div>
</div>
`;
